feat: add login page

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,5 @@
 .mainContainer {
-    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    min-height: 100vh;
 }
